# cargo-ensure

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md  STYLE_GUIDE.md  clippy.toml  deny.toml  rustfmt.toml
scripts/: check_clippy_region.py
src/: main.rs  paths.rs
