[package]
name = "cargo-ensure"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
toml_edit = "0.25.12"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
[lints.clippy]
todo = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unwrap_used = "deny"
expect_used = "deny"
unimplemented = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
allow_attributes_without_reason = "deny"
unnecessary_safety_comment = "deny"
unreachable = "deny"
empty_loop = "deny"
needless_borrow = "deny"
needless_pass_by_value = "deny"
large_enum_variant = "deny"
large_stack_arrays = "deny"
alloc_instead_of_core = "deny"
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
inefficient_to_string = "deny"
map_clone = "deny"
map_collect_result_unit = "deny"
slow_vector_initialization = "deny"
redundant_clone = "deny"
match_wildcard_for_single_variants = "deny"
indexing_slicing = "deny"
match_same_arms = "deny"
bool_comparison = "deny"
let_unit_value = "deny"
